--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     </div>
   </main>
     <nav class="nav-bar d-flex align-items-center">
-      <a href="3"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="sound-icon iconos-nav bi bi-house-fill"
+      <a href="#"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="sound-icon iconos-nav bi bi-house-fill"
           viewBox="0 0 16 16">
           <path fill-rule="evenodd"
             d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
