--- a/schedule.html
+++ b/schedule.html
@@ -15,6 +15,7 @@
 
     <div class="container-phone p-0 m-0" id="app">
         <header class="header-schedule">
+
             <h1 class="title-schedule me-3 mt-2 ps-2">Events</h1>
             <form class="schedule-selection">
                 <input type="radio" name="schedule-selection" v-model="period" value="all" class="btn-check" id="all"
@@ -33,7 +34,7 @@
             </form>
         </header>
         <main class="main-schedule container-fluid p-0 mb-5" id="app">
-            <template v-if="eventsFiltered.length == 0">
+            <template v-if="events.length == 0">
                 <div class="text-center">
                     <div class="spinner-border" role="status">
                         <span class="visually-hidden">Loading...</span>
@@ -41,33 +42,46 @@
                 </div>
             </template>
             <template v-else>
-                <div class="container-schedule" v-for="event in eventsFiltered">
-                    {{filterByPeriod}}
+                {{filterByPeriod}}
+                <div class="container-fluid p-0" v-if="eventsFiltered.length == 0">
+                    <svg xmlns="http://www.w3.org/2000/svg">
+                        <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+                            <path
+                                d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                        </symbol>
+                    </svg>
+                    <div class="alert alert-danger d-flex align-items-center" role="alert">
+
+                        <div> No hay resultados para esta búsqueda.</div>
+                    </div>
+                </div>
+                <div class="container-schedule" v-for="eve in eventsFiltered">
+
                     <div class="card-event d-flex justify-content-between align-items-center">
                         <div class="card-mark"></div>
                         <div class="info-event ps-4 pt-3">
-                            <h3>{{event.teams}}</h3>
-                            <p>{{event.location}}</p>
-                            <p>{{event.date}}</p>
+                            <h3>{{eve.teams}}</h3>
+                            <p>{{eve.location}}</p>
+                            <p>{{eve.date}}</p>
                         </div>
                         <div class="buttons-event d-flex flex-column justify-content-around pe-3">
                             <!--BUTTON-->
                             <button type="button" class="button-normalize" data-bs-toggle="modal"
-                                :data-bs-target="event.tagid">
+                                :data-bs-target="eve.tagid">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
                                     <path
                                         d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
                                 </svg>
                             </button>
-                            <button class="button-normalize" v-if="event.add" @click="addReminder(event)">
+                            <button class="button-normalize" v-if="eve.add" @click="addReminder(eve)">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-bell" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z" />
                                 </svg>
                             </button>
-                            <button class="button-normalize" v-else @click="deleteReminder(event)">
+                            <button v-else class="button-normalize" @click="deleteReminder(eve)">
 
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-bell-fill" viewBox="0 0 16 16">
@@ -78,27 +92,39 @@
                         </div>
                     </div>
                     <!--MODAL CARD-->
-                    <div class="modal fade" :id="event.id" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    <div class="modal fade" :id="eve.id" tabindex="-1" aria-labelledby="exampleModalLabel"
                         aria-hidden="true">
                         <div class="modal-dialog modal-fullscreen">
                             <div class="modal-content">
                                 <div class="container-event-map">
-                                    <iframe class="event-map" :src="event.src_map" style="border:0;" allowfullscreen=""
+                                    <iframe class="event-map" :src="eve.src_map" style="border:0;" allowfullscreen=""
                                         loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 </div>
                                 <div class="modal-body">
-                                    <div class="d-flex justify-content-around">
-                                        <h4>{{event.teams}}</h4>
+                                    <h4 class="text-center">{{eve.teams}}</h4>
+                                    <div class="d-flex justify-content-between mt-5">
 
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                            fill="currentColor" class="bi bi-bell-fill" viewBox="0 0 16 16">
-                                            <path
-                                                d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zm.995-14.901a1 1 0 1 0-1.99 0A5.002 5.002 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z" />
-                                        </svg>
+                                        <span>{{eve.date }}{{"-"}}{{ eve.time}}</span>
+
+                                        <button class="button-normalize" v-if="eve.add" @click="addReminder(eve)">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
+                                                <path
+                                                    d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z" />
+                                            </svg>
+                                        </button>
+                                        <button v-else class="button-normalize" @click="deleteReminder(eve)">
+
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-bell-fill" viewBox="0 0 16 16">
+                                                <path
+                                                    d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zm.995-14.901a1 1 0 1 0-1.99 0A5.002 5.002 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z" />
+                                            </svg>
+                                        </button>
                                     </div>
-                                    <span>{{event.location}}</span>
-                                    <span>{{event.date}}</span>
-                                    <p class="text-center">{{event.address}}</p>
+                                    <p class="text-center mt-5">{{eve.location}}</p>
+                                    <p class="text-center mt-4">{{eve.address}}</p>
+
                                 </div>
                                 <div class="modal-footer d-flex justify-content-center">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Go
