--- a/public/schedule.html
+++ b/public/schedule.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schedule</title>
-    <link href="./styles.css" rel="stylesheet" type="text/css" />
+    <link href="../public/styles.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -137,7 +137,7 @@
             </template>
         </main>
         <nav class="nav-bar d-flex align-items-center">
-            <a href="./index.html" type="button" @click="vibrate(500)"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+            <a href="../public/index.html" type="button" @click="vibrate(500)"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                     class="sound-icon iconos-nav bi bi-house-fill" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
                         d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
@@ -151,7 +151,7 @@
                     <path
                         d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
                 </svg></a>
-            <a href="./user.html" type="button" @click="vibrate(500)" ><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+            <a href="../public/user.html" type="button" @click="vibrate(500)" ><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                     class="sound-icon iconos-nav bi bi-person-fill" viewBox="0 0 16 16">
                     <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                 </svg></a>
@@ -162,8 +162,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-    <script src="./schedule.js"></script>
-    <script src="./main.js"></script>
+    <script src="../public/schedule.js"></script>
+    <script src="../public/main.js"></script>
 </body>
 
 </html>
