--- a/public/schedule.html
+++ b/public/schedule.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schedule</title>
-    <link href="../public/styles.css" rel="stylesheet" type="text/css" />
+    <link href="./styles.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -15,8 +15,7 @@
 
     <div class="container-phone p-0 m-0" id="app">
         <header class="header-schedule">
-
-            <h1 class="title-schedule me-3 mt-2 ps-2">Events</h1>
+            <h1 class="title-schedule">Events</h1>
             <form class="schedule-selection">
                 <input type="radio" name="schedule-selection" v-model="period" value="all" class="btn-check" id="all"
                     autocomplete="off">
@@ -43,17 +42,8 @@
             </template>
             <template v-else>
                 {{filterByPeriod}}
-                <div class="container-fluid p-0" v-if="eventsFiltered.length == 0">
-                    <svg xmlns="http://www.w3.org/2000/svg">
-                        <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
-                            <path
-                                d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-                        </symbol>
-                    </svg>
-                    <div class="alert alert-danger d-flex align-items-center" role="alert">
-
-                        <div> No hay resultados para esta búsqueda.</div>
-                    </div>
+                <div class="container-fluid p-0 d-flex justify-content-center" v-if="eventsFiltered.length == 0">
+                        <span class="text-center">No match founds</span>
                 </div>
                 <div class="container-schedule" v-for="eve in eventsFiltered">
 
@@ -137,7 +127,7 @@
             </template>
         </main>
         <nav class="nav-bar d-flex align-items-center">
-            <a href="../public/index.html" type="button" @click="vibrate(500)"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+            <a href="./index.html" type="button" @click="vibrate(500)"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                     class="sound-icon iconos-nav bi bi-house-fill" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
                         d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
@@ -151,7 +141,7 @@
                     <path
                         d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
                 </svg></a>
-            <a href="../public/user.html" type="button" @click="vibrate(500)" ><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+            <a href="./user.html" type="button" @click="vibrate(500)" ><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                     class="sound-icon iconos-nav bi bi-person-fill" viewBox="0 0 16 16">
                     <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                 </svg></a>
@@ -162,8 +152,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-    <script src="../public/schedule.js"></script>
-    <script src="../public/main.js"></script>
+    <script src="./schedule.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
