--- a/public/user.html
+++ b/public/user.html
@@ -12,68 +12,129 @@
 </head>
 
 <body>
-  <div class="container-phone p-0 m-0" id="app">
-    <header class="d-flex justify-content-end mt-2 pe-2">
-      <span class="log-out">Log out</span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
-        fill="currentColor" class="bi bi-box-arrow-right ms-2 mt-1" viewBox="0 0 16 16">
-        <path fill-rule="evenodd"
-          d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
-        <path fill-rule="evenodd"
-          d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
-      </svg>
-    </header>
-    <main class="main-account">
-      <div class="container-user-image mt-1">
-        <img src="./assets/img/user.png" alt="user image" class="user-image">
-        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
-          class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
-          <path
-            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
-        </svg>
-      </div>
+  <div class="body container-fluid p-0 m-0" id="app">
+    <div v-if="!logged" class="container-phone p-0 m-0 d-flex flex-column justify-content-between align-items-center">
+     <a href="./index.html" class="align-self-start"> <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="gray" class="bi bi-arrow-left-square-fill mt-2 ms-2" viewBox="0 0 16 16">
+        <path d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z"/>
+      </svg></a>
+      <img draggable="false" class="img-login" src="./assets/img/mdhl_logo.png" alt="logo mighty ducks hockey league">
+      <h1 class="ps-3 title-login">MIGHTY DUCKS </h1><h1 class="title-login text-end pe-3">HOCKEY LEAGUE</h1>
+      <form class="d-flex flex-column">
+        <label>Email</label>
+        <input type="email" class="form-control" />
+        <label>Password</label>
+        <input type="passsword" class="form-control" />
+        <a href="./index.html" @click="login()" type="button" class="button-login text-center">Login</a>
+      </form>
 
-      <p class="text-center mt-2">@username <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-          fill="currentColor" class="bi bi-pencil-square  ms-auto" viewBox="0 0 16 16">
-          <path
-            d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+      <span class="text-register mb-2">Don't have an account? <button type="button"
+          class="button-normalize button-register">Register</button< /span>
+    </div>
+    <div v-else class="container-phone p-0 m-0">
+      <header class="d-flex justify-content-end mt-2 pe-2">
+        <button @click="logout()" class="button-normalize log-out">Log out<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+          fill="currentColor" class="bi bi-box-arrow-right ms-2 mt-1" viewBox="0 0 16 16">
           <path fill-rule="evenodd"
-            d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
-        </svg></p>
-      <label for="name" class="p-2">Name</label>
-      <input id="name" type="text" class="form-control p-2 mb-1" value="ExampleName" placeholder="Name"
-        aria-label="Username" aria-describedby="basic-addon1">
-      <label for="last_name" class="p-2">Lastname</label>
-      <input id="last_name" type="text" class="form-control p-2 mb-1" value="ExampleLastName" placeholder="Name"
-        aria-label="Username" aria-describedby="basic-addon1">
-      <label for="age" class="p-2">Age</label>
-      <input id="age" type="number" class="form-control p-2 mb-1" value="0" placeholder="Name" aria-label="Username"
-        aria-describedby="basic-addon1">
-      <label for="gender" class="p-2">Name</label>
-      <input id="gender" type="text" class="form-control p-2 mb-1" value="ExampleGender" placeholder="Name"
-        aria-label="Username" aria-describedby="basic-addon1">
-      
-      
-    </main>
-    <nav class="nav-bar d-flex align-items-center">
-      <a href="./index.html" type="button" @click="vibrate(100)"><svg xmlns="http://www.w3.org/2000/svg"
-          fill="currentColor" class="sound-icon iconos-nav bi bi-house-fill" viewBox="0 0 16 16">
+            d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
           <path fill-rule="evenodd"
-            d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
-          <path fill-rule="evenodd"
-            d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
-        </svg></a>
-      <a href="./schedule.html" type="button" @click="vibrate(100)"><svg xmlns="http://www.w3.org/2000/svg"
-          fill="currentColor" class="sound-icon iconos-nav bi bi-calendar-date" viewBox="0 0 16 16">
-          <path
-            d="M6.445 11.688V6.354h-.633A12.6 12.6 0 0 0 4.5 7.16v.695c.375-.257.969-.62 1.258-.777h.012v4.61h.675zm1.188-1.305c.047.64.594 1.406 1.703 1.406 1.258 0 2-1.066 2-2.871 0-1.934-.781-2.668-1.953-2.668-.926 0-1.797.672-1.797 1.809 0 1.16.824 1.77 1.676 1.77.746 0 1.23-.376 1.383-.79h.027c-.004 1.316-.461 2.164-1.305 2.164-.664 0-1.008-.45-1.05-.82h-.684zm2.953-2.317c0 .696-.559 1.18-1.184 1.18-.601 0-1.144-.383-1.144-1.2 0-.823.582-1.21 1.168-1.21.633 0 1.16.398 1.16 1.23z" />
-          <path
-            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
-        </svg></a>
-      <a href="#" type="button" @click="vibrate(100)"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-          class="sound-icon iconos-nav bi bi-person-fill" viewBox="0 0 16 16">
-          <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
-        </svg></a>
-    </nav>
+            d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
+        </svg></button>
+      </header>
+      <main class="main-account d-flex flex-column justify-content-between">
+        <div>
+          <div class="container-user-image mt-1">
+            <img src="./assets/img/user.png" alt="user image" class="user-image">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
+              class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+              <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
+            </svg>
+          </div>
+          <p class="text-center mt-2">@username<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+              fill="gray" class="bi bi-pencil-square  ms-2" viewBox="0 0 16 16">
+              <path
+                d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+              <path fill-rule="evenodd"
+                d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+            </svg></p>
+        </div>
+        <div class="personal-data mb-3">
+          <h4 class="title-rules d-flex justify-content-between">Personal information<button v-if="conditionInput"
+              type="button" @click="enableEdition()" class="button-normalize"><svg xmlns="http://www.w3.org/2000/svg"
+                width="16" height="16" fill="gray" class="bi bi-pencil-square  ms-auto" viewBox="0 0 16 16">
+                <path
+                  d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                <path fill-rule="evenodd"
+                  d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+              </svg></button><button type="button" @click="saveChanges()" class="button-normalize button-save"
+              v-else>Save</button></h4>
+          <label for="name" class="mb-1">Name</label>
+          <input :disabled="conditionInput" required id="name" type="text" class="form-control mb-2" v-model="name"
+            :placeholder="placeName" aria-label="Username" aria-describedby="basic-addon1">
+          <label for="last_name" class="mb-1">Lastname</label>
+          <input :disabled="conditionInput" id="last_name" type="text" class="form-control  mb-2" v-model="lastName"
+            :placeholder="placeLastName" aria-label="Username" aria-describedby="basic-addon1">
+          <label for="age" class="mb-1">Age</label>
+          <input :disabled="conditionInput" id="age" type="number" class="form-control mb-2" max="20" v-model="age"
+            :placeholder="placeAge" aria-label="Username" aria-describedby="basic-addon1">
+          <div class="d-flex">
+            <label for="gender" class="mb-1">Gender</label>
+            <div v-if="!conditionInput"> <input type="radio" class="btn-check" name="gender" v-model="gender"
+                value="Male" id="male" autocomplete="off">
+              <label class="btn button-gender ms-2" for="male">Male</label>
+              <input type="radio" class="btn-check" name="gender" v-model="gender" value="Female" id="female"
+                autocomplete="off">
+              <label class="btn button-gender  ms-2" for="female">Female</label>
+            </div>
+          </div>
+          <input disabled id="gender" type="text" class="form-control mb-1" v-model="gender" :placeholder="placeGender"
+            aria-label="Username" aria-describedby="basic-addon1">
+
+
+
+        </div>
+        <div class="user-preferences">
+          <h4 class="title-rules">Preferences</h4>
+          <div>
+            <div class="form-check form-switch mb-2">
+              <label class="form-check-label" for="vibration">Turn off vibration</label>
+
+              <input v-model="vibration" class="form-check-input" type="checkbox" role="switch" id="vibration">
+            </div>
+            <div class="form-check form-switch mb-2">
+              <label class="form-check-label" for="dark_mode">Dark mode</label>
+              <input class="form-check-input" type="checkbox" role="switch" id="dark_mode">
+            </div>
+            <div class="form-check form-switch mb-2">
+              <label class="form-check-label" for="sound">Turn on sound</label>
+              <input class="form-check-input" type="checkbox" role="switch" id="sound">
+            </div>
+          </div>
+
+        </div>
+
+      </main>
+      <nav class="nav-bar d-flex align-items-center">
+        <a href="./index.html" type="button" @click="vibrate(50)"><svg xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor" class="sound-icon iconos-nav bi bi-house-fill" viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
+            <path fill-rule="evenodd"
+              d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
+          </svg></a>
+        <a href="./schedule.html" type="button" @click="vibrate(50)"><svg xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor" class="sound-icon iconos-nav bi bi-calendar-date" viewBox="0 0 16 16">
+            <path
+              d="M6.445 11.688V6.354h-.633A12.6 12.6 0 0 0 4.5 7.16v.695c.375-.257.969-.62 1.258-.777h.012v4.61h.675zm1.188-1.305c.047.64.594 1.406 1.703 1.406 1.258 0 2-1.066 2-2.871 0-1.934-.781-2.668-1.953-2.668-.926 0-1.797.672-1.797 1.809 0 1.16.824 1.77 1.676 1.77.746 0 1.23-.376 1.383-.79h.027c-.004 1.316-.461 2.164-1.305 2.164-.664 0-1.008-.45-1.05-.82h-.684zm2.953-2.317c0 .696-.559 1.18-1.184 1.18-.601 0-1.144-.383-1.144-1.2 0-.823.582-1.21 1.168-1.21.633 0 1.16.398 1.16 1.23z" />
+            <path
+              d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
+          </svg></a>
+        <a href="#" type="button" @click="vibrate(50)"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+            class="sound-icon iconos-nav bi bi-person-fill" viewBox="0 0 16 16">
+            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+          </svg></a>
+      </nav>
+    </div>
   </div>
   <script src="https://unpkg.com/vue@3"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
