cambio de estilo

--- a/public/schedule.html
+++ b/public/schedule.html
@@ -90,7 +90,7 @@
                                     <iframe class="event-map" :src="eve.src_map" style="border:0;" allowfullscreen=""
                                         loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 </div>
-                                <div class="modal-body">
+                                <div class="modal-body modal-body-event">
                                     <h4 class="text-center">{{eve.teams}}</h4>
                                     <div class="d-flex justify-content-between mt-5">
 
@@ -117,7 +117,7 @@
 
                                 </div>
                                 <div class="modal-footer d-flex justify-content-center">
-                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Go
+                                    <button type="button" class="button-normalize button-go-back" data-bs-dismiss="modal">Go
                                         back</button>
                                 </div>
                             </div>
